fixed spacing and started styling prices page

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -361,7 +361,7 @@ a.spaces-container:hover{
 }
 
 .faq-list{
-  margin-left: 90px;
+  margin-left: 30px;
   margin-top: 60px;
 }
 
